# french-catalogue-scraper

./: .gitignore  README.md  pyproject.toml
demos/: am_input.csv  am_output.csv  ccfr_input.csv  ccfr_output.csv
src/am_scraper/: commands.py  main.py  models.py  parser.py  scrape.py
src/ccfr_scraper/: __init__.py  commands.py  main.py  models.py  scrape.py  table_parser.py
tests/: am_scraper_test.py  e2e_csv_test.py  scraper_test.py
