[project]
name = "french-catalogue-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "casanova>=2.0.2",
    "click>=8.2.0",
    "lxml>=5.4.0",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccfr_scraper", "src/am_scraper"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
ccfr-scraper = "ccfr_scraper.main:cli"
am-scraper = "am_scraper.main:cli"
